--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Programme/FilterTab.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Programme/FilterTab.css
@@ -15,5 +15,5 @@
 .global-Filter-tab p {
   margin-right: 10px;
   padding-right: 10px;
-  border-right: solid red 1px;
+  border-right: solid #E30613 1px;
 }
