--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Spectacle/Index.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Spectacle/Index.css
@@ -22,7 +22,7 @@
   text-transform: uppercase;
   font-weight: 600;
   color: #fff;
-  background-color: #ed1c24;
+  background-color: #E30613;
   align-self: start;
   padding: 14px 5px 7px 5px;
 }
