--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Spectacle/SpectacleInfos.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Spectacle/SpectacleInfos.css
@@ -16,7 +16,7 @@
 
 .info-container ul li:before {
   content: "";
-  border-color: transparent #ed1c24;
+  border-color: transparent #E30613;
   border-style: solid;
   border-width: 0.35em 0 0.35em 0.45em;
   display: block;
