--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Transmission/TransmissionsPage.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Transmission/TransmissionsPage.css
@@ -5,10 +5,14 @@
   grid-template-areas: "transmission-public transmission-pro";
 }
 
+.transmission-grid-layout span {
+  color: #e30613;
+}
+
 div.red-arrow {
   position: relative;
   top: 0;
-  left: 60px;
+  left: 100px;
   width: 40px;
   height: 45px;
   background-color: #e30613;
@@ -16,11 +20,19 @@ div.red-arrow {
 }
 
 .transmission-content h1 {
-  font-family: "Gotham bold", sans-serif;
   font-weight: 1000;
   text-transform: uppercase;
 }
 
 .transmission-content p {
-  font-family: "Gotham light", sans-serif;
+  letter-spacing: 1px;
+  text-align: justify;
+  margin-bottom: 4vh;
+}
+
+.transmission-public h1,
+.transmission-pro h1 {
+  font-size: 1.8em;
+  font-weight: 1000;
+  text-transform: uppercase;
 }
