--- a/FRONT/gatsby-sens-interdits/src/components/globals/Carousel/ImageCarousel.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globals/Carousel/ImageCarousel.css
@@ -11,33 +11,33 @@ div.carousel-loading img {
 
 div.size-adjustment {
   width: auto;
-  max-height: 450px;
+  max-height: calc(100vh - 280px); /*450px*/
 }
 
 div.size-adjustment img {
   transform: translate(0, -25%);
 }
 
+div.carousel-wrapper {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 div.red {
   position: absolute;
-  top: 300px;
-  left: calc(50vw - 225px);
   z-index: 1;
   align-self: center;
-  background-color: #E30613;
+  background-color: #e30613;
   mix-blend-mode: multiply;
   width: 450px;
   height: 150px;
 }
 
 div.image-text {
-  position: absolute;
   z-index: 1;
-  top: 330px;
-  left: calc(50vw - 225px);
-  width: 450px;
   text-align: center;
-  align-self: center;
   position: absolute;
 }
 
