--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Homepage/Index.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Homepage/Index.css
@@ -5,7 +5,7 @@
 
 .global-homepage .slider img {
   width: 100%;
-  height: 500px;
+  /* height: 500px; */
   object-fit: cover;
 }
 
@@ -16,4 +16,3 @@
   margin: 0 auto 0 auto;
   max-width: 1080px;
 }
-
