--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Spectacle/Index.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Spectacle/Index.css
@@ -1,3 +1,8 @@
+.global-spectacle-page {
+  display: flex;
+  flex-direction: column;
+}
+
 .content-spectacle-page {
   width: 1080px;
   margin: 0 auto;
@@ -22,7 +27,7 @@
   text-transform: uppercase;
   font-weight: 600;
   color: #fff;
-  background-color: #E30613;
+  background-color: #e30613;
   align-self: start;
   padding: 14px 5px 7px 5px;
 }
