css design of the news link in header menu navbar

--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Header/Header.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Header/Header.css
@@ -57,6 +57,11 @@ header {
   padding: 0 5px;
   width: max-content;
 }
+
+.nav-bar li a {
+  color: white;
+}
+
 .nav-bar :nth-last-child(1) {
   border-right: none;
 }
