--- a/FRONT/gatsby-sens-interdits/src/components/globals/Calendar/CalendarLarge.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globals/Calendar/CalendarLarge.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  /* justify-content: center; */
-  width: 1080px;
+  justify-content: center;
+  /* width: 1080px; */
   margin: 20px auto 0 auto;
 }
