--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Header/Header.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Header/Header.css
@@ -61,6 +61,11 @@ header {
   font-size: 10px;
 }
 
+.newsletter-header a {
+  color: #000000;
+
+}
+
 .nav-bar {
   display: flex;
   flex-direction: row;
