add grayscale on displayTabMenu

--- a/FRONT/gatsby-sens-interdits/src/assets/styles/global.css
+++ b/FRONT/gatsby-sens-interdits/src/assets/styles/global.css
@@ -57,3 +57,11 @@ li {
 .to-uppercase {
   text-transform: uppercase;
 }
+
+.grayscale {
+  filter: grayscale(1);
+}
+
+.redscale {
+  mix-blend-mode: multiply;
+}
