--- a/FRONT/gatsby-sens-interdits/src/components/globals/DisplayTabMenu/DisplayTabMenu.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globals/DisplayTabMenu/DisplayTabMenu.css
@@ -26,3 +26,15 @@
   max-width: 200px;
   color: white;
 }
+
+.red-wrapper {
+  position: absolute;
+  width: 350px;
+  height: 250px;
+  mix-blend-mode: multiply;
+  background-color: #e30613;
+  z-index: 1;
+  display: none;
+}
+
+
