adding Hors scene page, local data, without filter on thumbnail

--- a/FRONT/gatsby-sens-interdits/src/components/globals/TabSystems/tabSystemV.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globals/TabSystems/tabSystemV.css
@@ -47,3 +47,16 @@ div.active-tab {
 div.disabled-tab {
   display: none;
 }
+
+
+/*________________spécifique à Hors Scene Page ______*/
+
+.tab-module-HS{
+  margin: 50px;
+}
+
+.Thumbnail-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
