--- a/FRONT/gatsby-sens-interdits/src/components/globals/DisplayTabMenu/DisplayTabMenu.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globals/DisplayTabMenu/DisplayTabMenu.css
@@ -3,7 +3,6 @@
   width: 350px;
   height: 250px;
   margin: 30px;
-  background-color: grey;
 }
 
 .display-tab-sticker .display-tab-title {
@@ -27,14 +26,23 @@
   color: white;
 }
 
-.red-wrapper {
+/* red effect on homepage-pictures */ 
+.display-tab-sticker:nth-last-child(3) .red-wrapper {
   position: absolute;
-  width: 350px;
-  height: 250px;
+  width: 100%;
+  height: 100%;
   mix-blend-mode: multiply;
   background-color: #e30613;
   z-index: 1;
-  display: none;
+}
+
+.display-tab-sticker:nth-last-child(2) .red-wrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  mix-blend-mode: multiply;
+  background-color: #e30613;
+  z-index: 1;
 }
 
 
