--- a/FRONT/gatsby-sens-interdits/src/components/globals/DisplayTabMenu/DisplayTabMenu.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globals/DisplayTabMenu/DisplayTabMenu.css
@@ -3,6 +3,7 @@
   width: 350px;
   height: 250px;
   margin: 30px;
+  background-color: grey;
 }
 
 .display-tab-sticker .display-tab-title {
@@ -26,8 +27,8 @@
   color: white;
 }
 
-/* red effect on homepage-pictures */ 
-.display-tab-sticker:nth-last-child(3) .red-wrapper {
+/* red effect odd in festival page and transmission*/
+#festival-menu .display-tab-sticker:nth-last-child(odd) .red-wrapper {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -36,7 +37,25 @@
   z-index: 1;
 }
 
-.display-tab-sticker:nth-last-child(2) .red-wrapper {
+.transmission-grid-layout .display-tab-sticker:nth-last-child(odd) .red-wrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  mix-blend-mode: multiply;
+  background-color: #e30613;
+  z-index: 1;
+}
+
+/* red effect on homepage */ 
+.content-homepage .display-tab-sticker:nth-last-child(2) .red-wrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  mix-blend-mode: multiply;
+  background-color: #e30613;
+  z-index: 1;
+}
+.content-homepage .display-tab-sticker:nth-last-child(3) .red-wrapper {
   position: absolute;
   width: 100%;
   height: 100%;
