--- a/FRONT/gatsby-sens-interdits/src/components/globals/Thumbnail/Index.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globals/Thumbnail/Index.css
@@ -35,7 +35,7 @@
 }
 
 .country-mini-tab {
-  background-color: #E30613;
+  background-color: #e30613;
   color: white;
   padding: 4px;
   border-radius: 0 0 7px 0;
@@ -50,7 +50,7 @@
 }
 
 .name-mini-tab {
-  color: #E30613;
+  color: #e30613;
   margin-top: 5px;
   margin-left: 5px;
   font-size: 20px;
