--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Programme/FilterTab.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Programme/FilterTab.css
@@ -1,9 +1,7 @@
 .global-Filter-tab {
-  width: 1080px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  margin: auto;
 }
 
 .global-Filter-tab h2 {
@@ -15,5 +13,5 @@
 .global-Filter-tab p {
   margin-right: 10px;
   padding-right: 10px;
-  border-right: solid #E30613 1px;
+  border-right: solid #e30613 1px;
 }
