change height logo principal

--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Header/Header.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Header/Header.css
@@ -114,8 +114,10 @@ header {
   margin-right: 20px;
   margin-bottom: -20px;
 }
+
 .main-logo img {
-  width: 570px;
+  width: auto;
+  height: 110px;
 }
 
 .next-festival-date {
