--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Homepage/Index.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Homepage/Index.css
@@ -13,7 +13,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 0 auto 0 auto;
+  margin: 0 auto;
   max-width: 1080px;
 }
 
