Auto stash before rebase of "origin/develop"

--- a/FRONT/gatsby-sens-interdits/src/components/globals/TabSystems/tabSystemV.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globals/TabSystems/tabSystemV.css
@@ -4,11 +4,13 @@
   grid-area: tab-module;
   display: flex;
   flex-direction: column;
+  background: #fff;
   display: flex;
   padding: 20px;
 }
 
 #tab-contentV {
+  padding-top: 10px;
   text-align: justify;
   margin: 0px;
 }
