--- a/FRONT/gatsby-sens-interdits/src/components/specifics/HorsScene/index.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/HorsScene/index.css
@@ -1,3 +1,35 @@
 #hors-scene-page {
-    margin: 50px;
+    margin-right: 50px;
+    margin-left: 50px;
+}
+
+#hors-scene-pres {
+    display: flex;
+    flex-direction: row;
+    padding : 20px;
+    text-align: justify;
+}
+
+#hors-scene-pres div {
+    width: 400px;
+
+}
+#hors-scene-Cal {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#hors-scene-tabsystem {
+    margin-right: auto;
+    margin-left: auto;
+}
+/*________________responsive__________*/
+@media screen and (max-width: 762px) {
+
+    #hors-scene-pres {
+        display: flex;
+        flex-direction: column;
+        padding : 20px;
+        text-align: justify;
+    }
 }
