change homepage with squaremenu

--- a/FRONT/gatsby-sens-interdits/src/components/globals/DisplayTabMenu/DisplayTabMenu.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globals/DisplayTabMenu/DisplayTabMenu.css
@@ -29,6 +29,7 @@
 .display-tab-sticker .display-tab-title a {
   max-width: 200px;
   color: white;
+  font-size: 28px;
 }
 
 /* red effect odd in festival page and transmission*/
