--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Homepage/Index.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Homepage/Index.css
@@ -1,6 +1,8 @@
 .global-homepage {
   display: flex;
   flex-direction: column;
+  max-width: 1080px;
+  margin: auto;
 }
 
 .global-homepage .slider img {
@@ -15,6 +17,16 @@
   justify-content: center;
   margin: 0 auto;
   max-width: 1080px;
+}
+
+div.red-arrow {
+  position: relative;
+  top: 0;
+  left: 100px;
+  width: 40px;
+  height: 45px;
+  background-color: #e30613;
+  clip-path: polygon(50% 100%, 0 0, 100% 0);
 }
 
 
