--- a/FRONT/gatsby-sens-interdits/src/components/specifics/HorsScene/index.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/HorsScene/index.css
@@ -23,6 +23,17 @@
     margin-right: auto;
     margin-left: auto;
 }
+
+div.red-arrow {
+    position: relative;
+    top: 0;
+    left: 100px;
+    width: 40px;
+    height: 45px;
+    background-color: #e30613;
+    clip-path: polygon(50% 100%, 0 0, 100% 0);
+  }
+
 /*________________responsive__________*/
 @media screen and (max-width: 762px) {
 
