convert momentjs to dayjs

--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Programme/FilterTab.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Programme/FilterTab.css
@@ -10,7 +10,7 @@
   margin-right: 20px;
 }
 
-.global-Filter-tab p {
+.global-Filter-tab a p {
   margin-right: 10px;
   padding-right: 10px;
   border-right: solid #e30613 1px;
