--- a/FRONT/gatsby-sens-interdits/src/pages/spectacle/Index.css
+++ b/FRONT/gatsby-sens-interdits/src/pages/spectacle/Index.css
@@ -57,7 +57,7 @@
 div.red-arrow-spectacle {
   position: absolute;
   top: 0;
-  left: 50%;
+  left: calc(50% - 20px);
   width: 40px;
   height: 45px;
   background-color: #e30613;
