--- a/FRONT/gatsby-sens-interdits/src/components/specifics/HorsScene/index.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/HorsScene/index.css
@@ -11,20 +11,21 @@
 }
 
 #hors-scene-pres div {
-    width: 400px;
+    width: 600px;
 
 }
 #hors-scene-Cal {
     margin-left: auto;
-    margin-right: auto;
+
 }
 
 #hors-scene-tabsystem {
     margin-right: auto;
     margin-left: auto;
+    width: 70%;
 }
 
-div.red-arrow {
+.red-arrow {
     position: relative;
     top: 0;
     left: 100px;
@@ -35,12 +36,22 @@ div.red-arrow {
   }
 
 /*________________responsive__________*/
-@media screen and (max-width: 762px) {
+@media screen and (max-width: 1024px) {
 
     #hors-scene-pres {
         display: flex;
         flex-direction: column;
         padding : 20px;
         text-align: justify;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    #hors-scene-pres div {
+        width: 400px;
+    }
+    #hors-scene-pres div:first-child {
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 20px;
     }
 }
