--- a/FRONT/gatsby-sens-interdits/src/components/globals/TabSystems/tabSystemV.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globals/TabSystems/tabSystemV.css
@@ -2,18 +2,27 @@
 
 .tab-moduleV {
   grid-area: tab-module;
-  display: flex;
   flex-direction: column;
   background: #fff;
   display: flex;
   padding: 20px;
+  transition: 0.3s ease-in-out;
+  overflow: hidden;
 }
 
-
-#tab-contentV {
+div.tab-contentV {
   padding-top: 10px;
   text-align: justify;
-  margin: 0px;
+  margin: 0;
+
+}
+
+div.tab-contentV.active-tab {
+  height: auto;
+}
+
+div.tab-contentV.disabled-tab {
+  height: 0;
 }
 
 /* signe + et title*/
@@ -29,26 +38,18 @@
 }
 
 .tab-titleV img {
-  margin-top: 5px;
+  align-self: center;
 }
 
 .tab-titleV h3 {
   margin-left: 20px;
-  margin-top: 10px;
   font-size: 22px;
+  align-self: center;
 }
 
 /* tab active*/
 .active {
   color: #E30613;
-}
-
-div.active-tab {
-  display: block;
-}
-
-div.disabled-tab {
-  display: none;
 }
 
 /* DISPLAY CREDITED_IMG */
