test pagination gatsby

--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Transmission/TransmissionsPage.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Transmission/TransmissionsPage.css
@@ -1,4 +1,4 @@
-.transmission-grid-layout {
+/* .transmission-grid-layout {
   display: grid;
   grid-template-columns: 50% 50%;
   gap: 0;
@@ -39,4 +39,4 @@ div.red-arrow {
   font-size: 1.8em;
   font-weight: 1000;
   text-transform: uppercase;
-}
+} */
