--- a/FRONT/gatsby-sens-interdits/src/components/globals/DisplayTabMenu/DisplayTabMenu.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globals/DisplayTabMenu/DisplayTabMenu.css
@@ -70,3 +70,18 @@
 }
 
 
+@media screen and (max-width: 960px) {
+
+  /* DISPLAYTABMENU */
+  .display-tab-sticker {
+    position: relative;
+    width: 250px;
+    height: 150px;
+    margin: 10px;
+    background-color: grey;
+  }
+  .display-tab-sticker .display-tab-title a{
+    font-size: 20px;
+  }
+
+}
