--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Footer/Footer.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Footer/Footer.css
@@ -131,7 +131,7 @@ footer {
   }
   .newsletter-container {
     width: 280px;
-    margin:auto;
+    margin: 10px 10px;
     font-size: 10px;
   }
   .footer-one{
