--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Programme/FilterTab.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Programme/FilterTab.css
@@ -10,8 +10,18 @@
   margin-right: 20px;
 }
 
-.global-Filter-tab a p {
+.global-Filter-tab p {
   margin-right: 10px;
   padding-right: 10px;
   border-right: solid #e30613 1px;
+}
+
+@media screen and (max-width: 960px) {
+  /* FILTERTAB */
+  .global-Filter-tab h2{
+    font-size: 14px;
+  }
+  .global-Filter-tab p {
+    font-size: 12px;
+  }
 }
