--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Header/Header.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Header/Header.css
@@ -20,7 +20,7 @@ header {
   position: fixed;
   z-index: 2;
   background-color: black;
-  box-shadow: 0 2px 5px black;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.65);
 }
 
 .header-row1 {
