--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Transmission/TransmissionsPage.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Transmission/TransmissionsPage.css
@@ -11,7 +11,8 @@
   height: 250px;
 }
 
-.transmission-grid-layout span {
+.transmission-grid-layout span,
+.transmission-content span {
   color: #e30613;
 }
 
@@ -45,7 +46,7 @@ div.red-arrow {
 
 @media screen and (max-width: 960px) {
   /* TRANSMISSION */
-  .transmission-grid-layout{
+  .transmission-grid-layout {
     display: flex;
     flex-direction: column;
   }
