--- a/FRONT/gatsby-sens-interdits/src/templates/article.css
+++ b/FRONT/gatsby-sens-interdits/src/templates/article.css
@@ -27,13 +27,16 @@
   .article-wrapper {
     margin-bottom: 15px;
   }
+
   .article-img {
+    justify-self: center;
     max-width: 80%;
     max-height: 50%;
   }
 
 
-  /*__________articles resume___________*/
+
+  /* __________articles resume___________*/
   .article-img-bottom-overflow {
     max-width: 20%;
   }
@@ -54,4 +57,4 @@
   .article-resume h4 {
     margin-top: 3px;
     margin-bottom: 10px;
-  }
+  } 
