--- a/FRONT/gatsby-sens-interdits/src/components/globals/DisplayTabMenu/DisplayTabMenu.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globals/DisplayTabMenu/DisplayTabMenu.css
@@ -32,7 +32,7 @@
   font-size: 28px;
 }
 
-/* red effect odd in festival page and transmission*/
+/* red effect odd in festival and transmission*/
 #festival-menu .display-tab-sticker:nth-last-child(odd) .red-wrapper {
   position: absolute;
   width: 100%;
@@ -51,7 +51,7 @@
   z-index: 1;
 }
 
-/* red effect on homepage */ 
+/* red effect on homepage and diffusion*/ 
 .content-homepage .display-tab-sticker:nth-last-child(2) .red-wrapper {
   position: absolute;
   width: 100%;
@@ -61,6 +61,22 @@
   z-index: 1;
 }
 .content-homepage .display-tab-sticker:nth-last-child(3) .red-wrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  mix-blend-mode: multiply;
+  background-color: #e30613;
+  z-index: 1;
+}
+.global-diffusion .display-tab-sticker:nth-last-child(2) .red-wrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  mix-blend-mode: multiply;
+  background-color: #e30613;
+  z-index: 1;
+}
+.global-diffusion .display-tab-sticker:nth-last-child(3) .red-wrapper {
   position: absolute;
   width: 100%;
   height: 100%;
