basics elements of seo

--- a/FRONT/template/index.html
+++ b/FRONT/template/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" media="screen" type="text/css" href="index.css" />
+    <meta name="description" content="" />
+    <meta property="og:site_name" content="Yacht Supply">
+    <meta property="og:title" content="Yacht Supply - All Spares On Board">
+    <meta property="og:description" content="">
+    <meta property="og:image" content="https://cdn1.yachtsupply.io/img/share-2.png">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.yachtsupply.io/">
     <title>Template HTML v1</title>
   </head>
   <body>
