[FRONT] search engine

--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Header/Header.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Header/Header.css
@@ -186,6 +186,10 @@ p {
   margin-right: 30px;
 }
 
+.search-magnifier {
+  cursor: pointer;
+}
+
 @media screen and (max-width: 960px) {
   /* HEADER */
   .header-row2 {
