--- a/FRONT/gatsby-sens-interdits/src/assets/styles/global.css
+++ b/FRONT/gatsby-sens-interdits/src/assets/styles/global.css
@@ -61,3 +61,20 @@ li {
 .grayscale {
   filter: grayscale(1);
 }
+
+.hidden {
+  display: none !important;
+}
+
+div.overlay {
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  background: rgba(0,0,0,0.7);
+}
+
