pop up de souscription et d'erreur pour la newsletter

--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Footer/Footer.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Footer/Footer.css
@@ -70,6 +70,7 @@ footer {
 }
 
 .newsletter-container {
+  position: relative;
   display: flex;
   justify-content: space-between;
   background: #1b1b1b;
@@ -105,6 +106,20 @@ footer {
   height: 37px;
   width: 15%;
   color: white;
+}
+
+/* message newsletter subscribe */
+.pop {
+  width : auto;
+  height : 40px;
+  background-color: black;
+  border: solid 3px #E30613;
+  text-align: center;
+  position : absolute;
+  top : -50px;
+  right : 0;
+  z-index:3;
+
 }
 
 @media screen and (max-width: 960px) {
