--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Footer/Footer.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Footer/Footer.css
@@ -112,8 +112,10 @@ footer {
 .pop {
   width : auto;
   height : 40px;
-  background-color: black;
-  border: solid 3px #E30613;
+  padding: 5px;
+  background-color: rgb(22, 22, 22);
+  border-radius: 5px;
+  border-top: solid 8px #E30613;
   text-align: center;
   position : absolute;
   top : -50px;
